public/src/scss/common.scss
@import "theme";

/* Sticky footer styles
-------------------------------------------------- */

@charset "UTF-8";
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 600;
  src: url('/fonts/Lato-Semibold.woff'); /* IE9 Compat Modes */
  src: local('Lato-Semibold'), 
       url('/fonts/Lato-Semibold.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/Lato-Semibold.woff') format('woff'), /* Modern Browsers */
}
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/Lato-Regular.woff'); /* IE9 Compat Modes */
  src: local('Lato-Regular'), 
       url('/fonts/Lato-Regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/Lato-Regular.woff') format('woff'), /* Modern Browsers */
}
// @font-face {
//   font-family: 'Lato';
//   font-style: normal;
//   font-weight: 300;
//   src: url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff'); /* IE9 Compat Modes */
//   src: local('Lato'), 
//        url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff2') format('woff2'), /* Super Modern Browsers */
//        url('/fonts/source-sans-pro-v9-latin_vietnamese_latin-ext-300.woff') format('woff'), /* Modern Browsers */
// }


html,
body {
  font-family: 'Lato', sans-serif;
  height: 100%;
  background-color: #F8F8F8;
  /* The html and body elements cannot have any padding or margin. */
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  &.mt-0 {
    margin-top: 0;
  }
  color: #132f4b;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide {
  display: none !important;
}

a {
  color: $link-blue;
  &:hover {
    color: $link-blue-hover;
  }
}

/* Styling for the ngProgress itself */
#ngProgress {
  background-color: $link-blue !important;
  box-shadow: none !important;
  color: #333333 !important;
  height: 3px !important;
  margin: 0;
  opacity: 0;
  padding: 0;
  z-index: 99998;

  /* Add CSS3 styles for transition smoothing */
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

/* Styling for the ngProgress-container */
#ngProgress-container {
  position: fixed;
  margin: 0;
  padding: 0;
  top: 79px;
  left: 0;
  right: 0;
  z-index: 99999;
}

/* QR modal */
#qr-canvas { display: none; }
#qrcode-scanner-video {
  margin: 0 auto 10px auto;
  display: block;
}
#file-input-wrapper {
  padding: 0;
  width: 100%;
  input {
    opacity: 0;
    padding: 5px;
  }
  span {
    padding-top: 5px;
    width: 100%;
  }
  i {
    display: none;
  }
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -51px;
  /* Pad bottom by footer height */
  padding: 0 0 75px;
}

.m10h { margin: 0 10px; }
.m20h { margin: 0 20px; }
.m5v { margin: 5px 0; }
.m20v { margin: 20px 0; }
.m10v { margin: 10px 0; }
.m50v { margin: 50px 0; }
.m10b { margin-bottom: 10px; }
.m10l { margin-left: 10px; }
.m20t { margin-top: 20px; }
.vm { vertical-align: middle; }
.pa {position: absolute;}
.pr {position: relative;}

.bgwhite {
  background-color: white;
}

.btn-group .btn+.btn, .btn-group .btn+.btn-group, .btn-group .btn-group+.btn, .btn-group .btn-group+.btn-group {
margin-left: 0;
}
thead {
  background-color: #F8F8F8;
}
.table {
  font-family: 'Lato', monospace;
}
.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
  background-color: #ededed;
}

// STYLES FOR NAVBAR

.navbar { 
  min-height: 80px; 
  &-default {
    background-color: #000;
    margin: 0;
    border: 0;
    padding-right: 60px;
    .navbar-toggle { 
      border-color: #fff;
      margin-top: 15px;
      &:hover, &:focus {
        background-color: #333;
      }
      .icon-bar { 
        background-color: #fff; 
      }
    }
    .navbar-nav {
      font-weight: 600;
      margin-left: 40px;
      margin-right: 60px;
      &>li>a {
        color: #F4FBE8;
        font-family: 'Lato', sans-serif;
        padding: 30px 30px;
        &.nav-buttons {
          font-size: 26px;                
        }
        &:hover {
          background-color: $link-blue;
          color: $white
        }
      }
      &>.active {
        &>a {
          background-color: $background;
          color: $link-blue;                
          &:hover {
            background-color: $background;
            color: $link-blue;                
          }
          &:focus {
            background-color: $background;
            color: $link-blue;      
          }
        }
      }
    }
    .status {
      padding: 7px 15px;
      background-color: #181818;
      margin-top: 24px;
      color: #CECED2;
      height: 33px;
      border-radius: 5px;
      -moz-border-radius: 5px;
      -webkit-border-radius: 5px;
      .glyphicon-ok {
        color: #41bf53;
      }
      .tooltip {
        margin: 0;
      }
    }
  }
}

.navbar-form {
  margin-top: 15px;
  .form-group {
    display: block;
  }
}

.navbar-brand-list {
  list-style: none;
  padding-left: 20px;
  .navbar-brand {
    padding: 14px 20px 0 0;
    margin-left: 0 !important;
    height: 0;
    line-height: 0;
    .svg-logo {
      height: 75px;
      width: 75px;
      background-image: url(/img/hx-logo.svg);
      background-size: 75px;
      background-repeat: no-repeat;
      display: inline-block;
    }
  }
}

.navbar-form {
  margin-top: 23.5px;
  width: 34%;
  padding: 0;
  padding-left: 15px;
  .form-control {
    border-left: 0;
    box-shadow: none;
    padding: 0;
    text-align: left;
    font-size: 1.73rem;
    color: #5a6d81;
    height: 33px;
    border-radius: 0;
    border-color: transparent;
  }
}

.nav-tabs.nav-justified>li>a:hover {
  cursor: pointer;
}

.form-group {
  width: 500px;
  max-width: 100%;
}

.gradient {
  background: linear-gradient(to right, #F9FBFC 0%, #F9FBFC 60%, #F4F7F9 50%, #F4F7F9 100%);
}
/* ... */

